@@ -50,7 +50,8 @@ init_options(struct program_options *options)
     assert((DFLT_OPT_ADDSLASH == OPT_NOADDSLASH) ||
            (DFLT_OPT_ADDSLASH == OPT_ADDSLASH));
     assert((DFLT_OPT_VERBOSE == OPT_NOVERBOSE) ||
-           (DFLT_OPT_VERBOSE == OPT_VERBOSE));
+           (DFLT_OPT_VERBOSE == OPT_VERBOSE) ||
+           (DFLT_OPT_VERBOSE == OPT_VVERBOSE));
     assert((DFLT_OPT_FOLLOWSYMLINKS == OPT_FOLLOWSYMLINKS) ||
            (DFLT_OPT_FOLLOWSYMLINKS == OPT_NOFOLLOWSYMLINKS));
     assert((DFLT_OPT_CROSSFSBOUNDARIES == OPT_NOCROSSFSBOUNDARIES) ||
