@@ -5,6 +5,7 @@
     - Added more verbose messages (option '-v')
     - Better error handling when unable to add file entries
       (mostly when running out of memory)
+    - Verbose mode now accepts several levels
     - Added option '-m', that tries to lower physical memory usage (at least
       during FS crawling) by using temporary file(s) and mmap(2) facility
 2011/12/06  0.3
